--- a/Nerve/src/main/AndroidManifest.xml
+++ b/Nerve/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kingnet.nerve">
-
+    <application>
+        <service android:name="com.kingnet.nerve.network.Uploader"
+            android:process="nerve.upload"/>
+    </application>
 </manifest>
