--- a/network/build.gradle
+++ b/network/build.gradle
@@ -35,7 +35,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation(project(":performance"))
-    implementation(project(":behavior"))
-    implementation(project(":network"))
+    api(project(":common"))
 }
