创建Service,读取数据文件

--- a/Nerve/build.gradle
+++ b/Nerve/build.gradle
@@ -37,5 +37,5 @@ dependencies {
 
     implementation(project(":performance"))
     implementation(project(":behavior"))
-    implementation(project(":network"))
+    implementation(project(":analyze"))
 }
