--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
+    implementation 'androidx.webkit:webkit:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
     implementation(project(":Nerve"))
 }
