--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".DemoApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.Nerve">
         <activity
@@ -21,10 +23,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".TestActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Nerve.NoActionBar"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
